[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["John Horton <info@expectedparrot.com>"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Software Development :: Libraries :: Application Frameworks", "Topic :: Software Development :: Libraries :: Python Modules"]
description = "Create and analyze LLM-based surveys"
documentation = "https://docs.expectedparrot.com"
homepage = "https://www.expectedparrot.com/"
include = ["edsl/questions/templates/**/*", "edsl/assistants/EDSL_SPECIFICATION.md"]
exclude = [
    "edsl/server/frontend/node_modules",
    "edsl/object_versions/frontend/node_modules",
    "edsl/unused",
    "edsl/conjure/unused",
    "edsl/conjure/qualtrics/examples",
    "**/*.zip",
    "**/*.ipynb",
    "**/node_modules",
]
keywords = ["LLM", "social science", "surveys", "user research"]
license = "MIT"
name = "edsl"
readme = "README.md"
version = "1.0.5.dev1"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.0.0"
openai = "^1.4.0"
jinja2 = "^3.1.2"
rich = "^13.7.0"
simpleeval = "^0.9.13"
# jupyter is optional - only needed for notebook environments
# pandas is optional - only needed for DataFrame operations, merge, Excel reading
tenacity = "^8.2.3"
python-docx = "^1.1.0"
nest-asyncio = "^1.5.9"
aiohttp = "^3.9.1"
requests = "^2.32.0"
# pydot is optional - only needed for flow visualization
# anthropic is optional - only needed if using Anthropic models
# pygments is optional - only needed for syntax highlighting
restrictedpython = "^7.1"
# groq is optional - only needed if using Groq models
# boto3 is optional - only needed if using AWS Bedrock models
# azure-ai-inference is optional - only needed if using Azure AI models
json-repair = "^0.28.4"
# mistralai is optional - only needed if using Mistral models
urllib3 = ">=1.25.4,<1.27"
tabulate = "^0.9.0"
# pypdf2 is optional - only needed for PDF text extraction
platformdirs = "^4.3.6"
rank-bm25 = "^0.2.2"
pydantic-settings = "^2.10.1"
# anywidget is optional - only needed for Jupyter widgets
# google-genai is optional - only needed if using Google/Gemini models
# mammoth is optional - only needed for DOCX to HTML conversion

[tool.poetry.dependencies.altair]
version = "^5.0.0"
optional = true

[tool.poetry.dependencies.black]
extras = ["jupyter"]
version = "^24.4.2"

[tool.poetry.dependencies.fastapi]
version = "^0.112.1"
optional = true

[tool.poetry.dependencies.nbclient]
version = "^0.10.0"
optional = true

[tool.poetry.dependencies.nbformat]
version = "^5.0.0"
optional = true

[[tool.poetry.dependencies.numpy]]
version = ">=1.24.0,<3"
python = "<3.13"

[[tool.poetry.dependencies.numpy]]
version = ">=2.1.0,<3"
python = ">=3.13"

[tool.poetry.dependencies.playwright]
version = "^1.40.0"
optional = true

[tool.poetry.dependencies.psutil]
version = "^6.1.0"
optional = true

[tool.poetry.dependencies.pyreadstat]
version = "1.2.8"
optional = true

[tool.poetry.dependencies.pyyaml]
version = "^6.0"
optional = true

# requests is now a required dependency (moved above)

[tool.poetry.dependencies.pygments]
version = "^2.17.2"
optional = true

[tool.poetry.dependencies.pypdf2]
version = "^3.0.1"
optional = true

[tool.poetry.dependencies.anywidget]
version = "^0.9.18"
optional = true

[tool.poetry.dependencies.mammoth]
version = "^1.11.0"
optional = true

[tool.poetry.dependencies.pydot]
version = "^2.0.0"
optional = true

[tool.poetry.dependencies.pandas]
version = "^2.1.4"
optional = true

[tool.poetry.dependencies.sqlalchemy]
version = "^2.0.23"
optional = true

[tool.poetry.dependencies.seaborn]
version = "^0.13.2"
optional = true

[tool.poetry.dependencies."sentence-transformers"]
version = "^2.2.2"
optional = true

[tool.poetry.dependencies.typer]
extras = ["all"]
version = "^0.9.0"

[tool.poetry.dependencies.uvicorn]
version = "^0.30.6"
optional = true

[tool.poetry.dependencies.termplotlib]
version = "^0.3.9"
optional = true

[tool.poetry.dependencies.qrcode]
extras = ["pil"]
version = "^8.0"
optional = true

[tool.poetry.dependencies.scipy]
version = "^1.11.0"
optional = true

[tool.poetry.dependencies.scikit-learn]
version = "^1.7.2"
optional = true

[tool.poetry.dependencies.matplotlib]
version = "^3.9.0"
optional = true

[tool.poetry.dependencies.openpyxl]
version = "^3.1.5"
optional = true

[tool.poetry.dependencies.python-pptx]
version = "^1.0.2"
optional = true

[tool.poetry.dependencies.joblib]
version = "^1.5.2"
optional = true

[tool.poetry.dependencies.anthropic]
version = "^0.45.0"
optional = true

[tool.poetry.dependencies.groq]
version = "0.23.1"
optional = true

[tool.poetry.dependencies.boto3]
version = "^1.34.161"
optional = true

[tool.poetry.dependencies."azure-ai-inference"]
version = "^1.0.0b3"
optional = true

[tool.poetry.dependencies.mistralai]
version = "^1.0.2"
optional = true

[tool.poetry.dependencies."google-genai"]
version = "^1.30.0"
optional = true

[tool.poetry.dependencies.jupyter]
version = "^1.0.0"
optional = true

[tool.poetry.dependencies.ipython]
version = ">=7.0.0"
optional = true

[tool.poetry.extras]
# Full installation - everything including all LLM providers and notebook support
full = ["playwright", "fastapi", "uvicorn", "altair", "nbformat", "nbclient", "pyyaml", "pyreadstat", "psutil", "sentence-transformers", "seaborn", "termplotlib", "qrcode", "scipy", "scikit-learn", "matplotlib", "openpyxl", "python-pptx", "joblib", "anthropic", "groq", "boto3", "azure-ai-inference", "mistralai", "google-genai", "jupyter", "ipython", "pygments", "pypdf2", "anywidget", "mammoth", "pandas", "sqlalchemy", "pydot"]

# LLM Provider SDKs (OpenAI is always included by default)
# Use: pip install edsl[llm_providers]  - for all providers
# Or install individually: pip install edsl[anthropic] edsl[google] etc.
llm_providers = ["anthropic", "groq", "boto3", "azure-ai-inference", "mistralai", "google-genai"]
anthropic = ["anthropic"]
groq = ["groq"]
bedrock = ["boto3"]
azure = ["azure-ai-inference"]
mistral = ["mistralai"]
google = ["google-genai"]
screenshots = ["playwright"]
services = ["fastapi", "uvicorn"]
viz = ["altair", "nbformat", "nbclient", "pyyaml", "termplotlib"]
# Notebook support - for Jupyter/IPython environments
notebook = ["jupyter", "ipython"]
conjure = ["pyreadstat", "psutil"]
# Service dependencies - loaded dynamically by services when needed
service_deps = ["scipy", "scikit-learn", "matplotlib", "seaborn", "openpyxl", "python-pptx", "joblib", "qrcode", "sentence-transformers"]

# Optional file handling and display
pdf = ["pypdf2"]
widgets = ["anywidget"]
highlighting = ["pygments"]
docx_view = ["mammoth"]
# Data processing - for DataFrame operations, merge, Excel reading
pandas = ["pandas"]
# SQL-based caching - for persistent cache storage
caching = ["sqlalchemy"]
# Flow visualization - for show_flow() diagrams
visualization = ["pydot"]

[tool.poetry.group.dev.dependencies]
click = "^8.0.0"
coverage = "^7.3.3"
ipykernel = "^6.29.0"
mypy = "^1.7.1"
myst-parser = "^3.0.1"
nbclient = "^0.10.0"
nbconvert = "^7.16.0"
nbformat = "^5.9.2"
nbsphinx = "^0.9.3"
objgraph = "^3.6.0"
polyfactory = "^2.16.2"
pre-commit = "^3.6.0"
pydocstyle = "^6.3.0"
pylint = "^3.1.0"
ruff = "^0.3.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5"
pytest-env = "^1.1.3"
pytest-html = "^4.1.1"
pytest-mock = "^3.12.0"
pytest-profiling = "^1.7.0"
pytest-xdist = "^3.5.0"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-fontawesome = "^0.0.6"
sphinx-rtd-theme = "^2.0.0"
toml = "^0.10.2"
toml-sort = "^0.23.1"

[tool.poetry.scripts]
edsl = "edsl.__main__:main"

[tool.tomlsort.overrides."tool.poetry.dependencies"]
table_keys = false
