[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core", "setuptools<72.0",]

[tool.poetry]
authors = [ "John Horton <info@expectedparrot.com>",]
classifiers = [ "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Software Development :: Libraries :: Application Frameworks", "Topic :: Software Development :: Libraries :: Python Modules",]
description = "Create and analyze LLM-based surveys"
documentation = "https://docs.expectedparrot.com"
homepage = "https://www.expectedparrot.com/"
include = [ "edsl/questions/templates/**/*", "edsl/assistants/EDSL_SPECIFICATION.md",]
keywords = [ "LLM", "social science", "surveys", "user research",]
license = "MIT"
name = "edsl"
readme = "README.md"
version = "1.0.8.dev1"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
aiohttp = "^3.9.1"
httpx = ">=0.24.0"
jinja2 = "^3.1.2"
json-repair = "^0.28.4"
nest-asyncio = "^1.5.9"
platformdirs = "^4.3.6"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
requests = "^2.32.0"
restrictedpython = "^7.0"
rich = "^13.7.0"
simpleeval = "^0.9.13"
tenacity = "^8.2.3"
psutil = "^6.1.0"

[tool.poetry.extras]
inference = [ "openai", "groq", "boto3", "anthropic", "azure-ai-inference", "google-genai", "mistralai", "sqlalchemy",]
file-formats = [ "python-docx", "openpyxl", "pypdf2", "python-pptx", "pandas",]
full = [ "openai", "groq", "boto3", "anthropic", "azure-ai-inference", "google-genai", "mistralai", "sqlalchemy", "black", "pydot", "python-docx", "openpyxl", "pypdf2", "python-pptx", "playwright", "fastapi", "uvicorn", "altair", "nbformat", "nbclient", "psutil", "seaborn", "termplotlib", "qrcode", "pandas",]
notebook = [ "nbformat", "nbclient", "psutil",]
screenshots = [ "playwright",]
services = [ "fastapi", "uvicorn",]
viz = [ "altair", "nbformat", "nbclient", "termplotlib", "pydot",]
agent_building = [ "sentence-transformers", "seaborn",]
runner = [ "redis", "sqlalchemy",]
runner-gcp = [ "google-cloud-storage",]
gcp = [ "google-cloud-storage",]

[tool.poetry.scripts]
edsl = "edsl.__main__:main"

[tool.ty.rules]
unresolved-import = "ignore"

[tool.poetry.dependencies.openai]
version = "^2.44.0"
extras = [ "aiohttp",]
optional = true

[tool.poetry.dependencies.anthropic]
version = "^0.80.0"
optional = true

[tool.poetry.dependencies.azure-ai-inference]
version = "^1.0.0b3"
optional = true

[tool.poetry.dependencies.boto3]
version = "^1.34.161"
optional = true

[tool.poetry.dependencies.google-genai]
version = "^1.30.0"
optional = true

[tool.poetry.dependencies.groq]
version = "0.23.1"
optional = true

[tool.poetry.dependencies.mistralai]
version = "^1.0.2"
optional = true

[tool.poetry.dependencies.openpyxl]
version = "^3.1.5"
optional = true

[tool.poetry.dependencies.pypdf2]
version = "^3.0.1"
optional = true

[tool.poetry.dependencies.python-docx]
version = "^1.1.0"
optional = true

[tool.poetry.dependencies.python-pptx]
version = "^1.0.2"
optional = true

[tool.poetry.dependencies.black]
version = "^24.4.2"
optional = true

[tool.poetry.dependencies.pydot]
version = "^2.0.0"
optional = true

[tool.poetry.dependencies.sqlalchemy]
version = "^2.0.23"
optional = true

[tool.poetry.dependencies.pandas]
version = ">=2.1.4,<4"
optional = true

[tool.poetry.dependencies.altair]
version = "^5.0.0"
optional = true

[tool.poetry.dependencies.fastapi]
version = "^0.112.1"
optional = true

[tool.poetry.dependencies.google-cloud-storage]
version = ">=2.14.0"
optional = true

[tool.poetry.dependencies.nbclient]
version = "^0.10.0"
optional = true

[tool.poetry.dependencies.nbformat]
version = "^5.0.0"
optional = true

[tool.poetry.dependencies.playwright]
version = "^1.40.0"
optional = true

[tool.poetry.dependencies.qrcode]
version = "^8.0"
extras = [ "pil",]
optional = true

[tool.poetry.dependencies.redis]
version = ">=5.0.0"
optional = true

[tool.poetry.dependencies.seaborn]
version = "^0.13.2"
optional = true

[tool.poetry.dependencies.sentence-transformers]
version = "^2.2.2"
optional = true

[tool.poetry.dependencies.termplotlib]
version = "^0.3.9"
optional = true

[tool.poetry.dependencies.uvicorn]
version = "^0.30.6"
optional = true

[tool.poetry.dependencies.typer]
extras = [ "all",]
version = ">=0.9,<1"

[tool.tomlsort.overrides."tool.poetry.dependencies"]
table_keys = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
myst-parser = "^3.0.1"
nbsphinx = "^0.9.3"
objgraph = "^3.6.0"
pre-commit = "^3.6.0"
pydocstyle = "^6.3.0"
pylint = "^3.1.0"
ruff = "^0.3.0"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-fontawesome = "^0.0.6"
sphinx-rtd-theme = "^2.0.0"
toml-sort = "^0.23.1"
ty = "^0.0.23"

[tool.poetry.group.test.dependencies]
click = "^8.0.0"
coverage = "^7.3.3"
nbformat = "^5.9.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5"
pytest-env = "^1.1.3"
pytest-html = "^4.1.1"
pytest-mock = "^3.12.0"
pytest-profiling = "^1.7.0"
pytest-xdist = "^3.5.0"
numpy = "^1.24.0"
